tests/ui-fulldeps/dropck-tarena-cycle-checked.stderr
error[E0597]: `arena` does not live long enough
  --> $DIR/dropck-tarena-cycle-checked.rs:116:7
   |
LL |     let arena = TypedArena::default();
   |         ----- binding `arena` declared here
LL |     f(&arena);
   |       ^^^^^^ borrowed value does not live long enough
LL | }
   | -
   | |
   | `arena` dropped here while still borrowed
   | borrow might be used here, when `arena` is dropped and runs the `Drop` code for type `TypedArena`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0597`.
